@@ -66,7 +66,7 @@ DEPENDENCY=	projects/paladin/Paladin/LicenseManager.h|projects/paladin/Paladin/T
 SOURCEFILE=VRegWindow.cpp
 DEPENDENCY=/boot/home/projects/paladin/Paladin/VRegWindow.h|/boot/home/projects/paladin/Paladin/ThirdParty/DWindow.h|/boot/home/projects/paladin/Paladin/ThirdParty/AutoTextControl.h|/boot/home/projects/paladin/Paladin/ThirdParty/CRegex.h|/boot/home/projects/paladin/Paladin/PLocale.h
 GROUP=Build System
-EXPANDGROUP=yes
+EXPANDGROUP=no
 SOURCEFILE=BuildSystem/BuildInfo.cpp
 DEPENDENCY=/boot/home/projects/paladin/Paladin/BuildSystem/BuildInfo.cpp|/boot/home/projects/paladin/Paladin/BuildSystem/BuildInfo.h|/boot/home/projects/paladin/Paladin/ThirdParty/DPath.h|/boot/home/projects/paladin/Paladin/BuildSystem/ErrorParser.h|/boot/home/projects/paladin/Paladin/ThirdParty/ObjectList.h|/boot/home/projects/paladin/Paladin/ProjectPath.h
 SOURCEFILE=BuildSystem/ErrorParser.cpp
